--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="navbar">
-    <a href="home.html" class="active">Home</a>
+    <a href="home.html">Home</a>
     <a href="index.html">Attendance List</a>
     <a href="add-student.html">Add Student</a>
     <a href="#">Reports</a>
